made published counter strong, swapped counter to positon fixed, better alignment, added more breathing room for Title in grid

--- a/src/apps/publish/src/app/components/PlanTable/PlanTable.less
+++ b/src/apps/publish/src/app/components/PlanTable/PlanTable.less
@@ -25,7 +25,7 @@
   tbody {
     tr {
       display: grid;
-      grid-template-columns: 60px 200px 1fr minmax(auto, 400px) 100px 90px;
+      grid-template-columns: 60px 200px 200px minmax(auto, 400px) 100px 90px;
       column-gap: 16px;
       padding: 12px;
 
@@ -35,7 +35,7 @@
     }
   }
   tfoot {
-    position: absolute;
-    bottom: 16px;
+    position: fixed;
+    bottom: 6px;
   }
 }
